# ygba

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  LICENSE  Makefile  README.md  THANKS  TODO.md  algorithms.c  algorithms.cpp  algorithms.h  build-msys.bat  build-ninja.bat  build-unix.sh  build-vs2019.bat  build-vs2022.bat  checklist.txt  compare.py  cpu-arm.c  cpu-thumb.c  cpu.c  cpu.h  gba.c  main.c  main.cpp
cimgui/: Makefile
cmake/: FindSDL2.cmake
lib/: CMakeLists.txt
lib/gl3w/: CMakeLists.txt
lib/imgui/: CMakeLists.txt  imconfig.h
src/: CMakeLists.txt  algorithms.cpp  algorithms.h  audio.cpp  audio.h  backup.cpp  backup.h  cpu-arm.cpp  cpu-thumb.cpp  cpu.cpp  cpu.h  dma.cpp  dma.h  gpio.cpp  gpio.h  io.cpp  io.h  main.cpp  main.h  memory.cpp  memory.h  system.cpp  system.h  timer.cpp  timer.h  video.cpp  video.h
